welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:5: error: illegal start of simple pattern
 	for (<-1 to nbPas) {
             ^Program:8: error: '<-' expected but '}' found.
 }else{
 ^