welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean)

 if (versLAvant== true) {
 	for (<-1 to nbPas) {
 		avance()
 	}
 }else{
 	recule()
 }
